paginations,text align issues

--- a/src/app/core/select-content-modules/select-content-modules.component.css
+++ b/src/app/core/select-content-modules/select-content-modules.component.css
@@ -21,6 +21,7 @@ h5 {
 .img1 {
     background: #ebf1ff;
     text-align: center;
+    border-radius: 5px;
 }
 
 .img-responsive, .thumbnail a>img, .thumbnail>img {
