--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -23,6 +23,7 @@ h5 {
     background: #ebf1ff;
     text-align: center;
     height: 233px;
+    border-radius: 5px;
 }
 
 .img-responsive,
