--- a/src/app/util/comments/comments.component.css
+++ b/src/app/util/comments/comments.component.css
@@ -22,6 +22,7 @@ h5 {
     background: #ebf1ff;
     text-align: center;
     height: 233px;
+    border-radius: 5px;
 }
 
 .img-responsive, .thumbnail a>img, .thumbnail>img {
